// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Table Head should render properly with dark background 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  background-color: transparent;
}

.c7 {
  font-size: 2.0rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c7 * {
  fill-opacity: 1;
  fill: #607890;
}

.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-transform: uppercase;
}

.c3 {
  padding: 1rem 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1::after {
  content: '';
  width: calc(100% - 1.6rem);
  margin: 0 0.8rem;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c1 .c2:hover {
  cursor: pointer;
}

.c1 .c2:hover .c4 {
  color: #1A6BF0;
}

.c1 .c2:hover .c6 * {
  fill: #1A6BF0;
}

.c1 .c4 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline;
  color: #435465;
}

.c1 .c6 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  width: 2.4rem;
  cursor: pointer;
  padding-left: 0.4rem;
}

.c1 .c6 * {
  fill: #435465;
}

<div>
  <table>
    <thead>
      <tr
        class="c0"
      >
        <th
          class="c1"
        >
          <span
            class="c2 c3"
          >
            <h5
              class="c4 c5"
            >
              Patient Info
            </h5>
            <svg
              class="c6 c7"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.208 5.03a1 1 0 0 1 1.584 0l3.165 4.11a1 1 0 0 1-.793 1.61H8.836a1 1 0 0 1-.793-1.61l3.165-4.11zM12.792 18.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </span>
        </th>
        <th
          class="c1"
        >
          <span
            class="c2 c3"
          >
            <h5
              class="c4 c5"
            >
              RxInfo
            </h5>
            <svg
              class="c6 c7"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.208 5.03a1 1 0 0 1 1.584 0l3.165 4.11a1 1 0 0 1-.793 1.61H8.836a1 1 0 0 1-.793-1.61l3.165-4.11zM12.792 18.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table Head should render properly with light background 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  background-color: transparent;
}

.c7 {
  font-size: 2.0rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c7 * {
  fill-opacity: 1;
  fill: #607890;
}

.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-transform: uppercase;
}

.c3 {
  padding: 1rem 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1::after {
  content: '';
  width: calc(100% - 1.6rem);
  margin: 0 0.8rem;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c1 .c2:hover {
  cursor: pointer;
}

.c1 .c2:hover .c4 {
  color: #1A6BF0;
}

.c1 .c2:hover .c6 * {
  fill: #1A6BF0;
}

.c1 .c4 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline;
  color: #607890;
}

.c1 .c6 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  width: 2.4rem;
  cursor: pointer;
  padding-left: 0.4rem;
}

.c1 .c6 * {
  fill: #607890;
}

<div>
  <table>
    <thead>
      <tr
        class="c0"
      >
        <th
          class="c1"
        >
          <span
            class="c2 c3"
          >
            <h5
              class="c4 c5"
            >
              Patient Info
            </h5>
            <svg
              class="c6 c7"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.208 5.03a1 1 0 0 1 1.584 0l3.165 4.11a1 1 0 0 1-.793 1.61H8.836a1 1 0 0 1-.793-1.61l3.165-4.11zM12.792 18.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </span>
        </th>
        <th
          class="c1"
        >
          <span
            class="c2 c3"
          >
            <h5
              class="c4 c5"
            >
              RxInfo
            </h5>
            <svg
              class="c6 c7"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.208 5.03a1 1 0 0 1 1.584 0l3.165 4.11a1 1 0 0 1-.793 1.61H8.836a1 1 0 0 1-.793-1.61l3.165-4.11zM12.792 18.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;
